# PHARMA_AI_AGENTS

./: README.md
backend/: .env  package-lock.json  package.json
backend/src/: server.js
backend/src/controllers/: report.controller.js
backend/src/routes/: report.routes.js
backend/src/services/: crewai.service.js  job.store.js  pdf.service.js
backend/templates/: ReportPdf.js
crewai_agents/: .env  .gitignore  agents.py  amain.py  api.py  main.py  pyproject.toml  requirements.txt  sample_agents.ipynb  tasks.py  tools.py
crewai_agents/clinical_trials_agent/: agent_runner.py  runner.py  task.py  tools.py
crewai_agents/clinical_trials_agent/config/: agent.yaml  api.yaml  task.yaml
crewai_agents/clinical_trials_agent/schemas/: input_schema.json  output_schema.json
crewai_agents/clinical_trials_agent/storage/: raw_clinical_trials.json
crewai_agents/clinical_trials_agent/utils/: clinical_trials_parser.py  file_writer.py  schema_validator.py
crewai_agents/examples/: output.json
crewai_agents/report_engine/: pdf_renderer.py
crewai_agents/report_engine/templates/: report.html.j2
crewai_agents/reporter/: reporter.py
crewai_agents/schemas/: context.schema.json
frontend/: vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: ReportGenerator.jsx  Sidebar.jsx
pharma_crewai/: README.md  pyproject.toml  report.md
pharma_crewai/src/pharma_crewai/: crew.py  main.py
