[project]
name = "pharma_crewai"
version = "0.1.0"
description = "pharma_crewai using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.7.0"
]

[project.scripts]
pharma_crewai = "pharma_crewai.main:run"
run_crew = "pharma_crewai.main:run"
train = "pharma_crewai.main:train"
replay = "pharma_crewai.main:replay"
test = "pharma_crewai.main:test"
run_with_trigger = "pharma_crewai.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
